Quit the second GPU process when its job to gather the DX12/Vulkan info is complete.

The previous checkin for "996594:Adding SupportsDX12 and SupportsVulkan to UMA histogram
for the Windows platform" did not quit the GPU process after the job is complete.

base::RunLoop().QuitCurrentWhenIdleDeprecated() is added to the end of the function of the second
GPU process to fix this issue.

BUG=832596
TEST=manual,Chrome task manager
R=zmo@chromium.org

Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel
Change-Id: Ifadb24d39b24a9a5a6cdc0c33e66bcfc42d5a5a7
Reviewed-on: https://chromium-review.googlesource.com/1012595
Reviewed-by: Zhenyao Mo <zmo@chromium.org>
Commit-Queue: Maggie Chen <magchen@chromium.org>
Cr-Commit-Position: refs/heads/master@{#550751}
Former-commit-id: 018244f73127cd9a15d8db35eae7b1e00c7ec2ab